Fix flex wrapping

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ h2 {
 	font-size: 2em;
 	font-weight: 700;
 }
+
+
+/* INLINE FONT STYLINS */
 .bluetype {
 	background-color: lightblue;
 	border: 5px solid lightblue;
@@ -20,22 +23,24 @@ h2 {
 .italics {
 	font-style: italic;
 }
+
+
 .flex-container {
-	flex: 1;
 	display: flex;
 	flex-wrap: wrap;
 }
 
+.left-flex,
+.right-flex {
+	min-width: 300px;
+}
+
 .left-flex {
 	flex: 1;
-	padding-right: 20px;
-	padding-left: 50px;
 }
 
 .right-flex {
 	flex: 1;
-	padding-left: 20px;
-	padding-right: 50px;
 }
 
 ol {
@@ -43,5 +48,5 @@ ol {
 }
 
 .invisible {
-	visibility: hidden;
+	display: none;
 }
